// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`The FakeBreakingNewsLambda stack matches the snapshot for CODE 1`] = `
{
  "Metadata": {
    "gu:cdk:constructs": [
      "GuDistributionBucketParameter",
      "GuScheduledLambda",
      "GuAlarm",
      "GuAlarm",
    ],
    "gu:cdk:version": "TEST",
  },
  "Parameters": {
    "DistributionBucketName": {
      "AllowedValues": [
        "/account/services/artifact.bucket.n10n",
      ],
      "Default": "/account/services/artifact.bucket.n10n",
      "Description": "SSM parameter containing the S3 bucket name holding distribution artifacts",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "NotEnoughAndroidFakeBreakingNewsAlarm2714F480": {
      "Properties": {
        "ActionsEnabled": true,
        "AlarmActions": [
          {
            "Fn::Join": [
              "",
              [
                "arn:aws:sns:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":mobile-server-side",
              ],
            ],
          },
        ],
        "AlarmDescription": "Triggers if not enough Android dry run notifications are happening on CODE",
        "AlarmName": "NotEnoughAndroidFakeBreakingNewsAlarm-CODE",
        "ComparisonOperator": "LessThanThreshold",
        "Dimensions": [
          {
            "Name": "platform",
            "Value": "android",
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "dryrun",
        "Namespace": "Notifications/CODE/workers",
        "Period": 7200,
        "Statistic": "Sum",
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "Threshold": 1,
        "TreatMissingData": "breaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "NotEnoughIosFakeBreakingNewsAlarmDC45D752": {
      "Properties": {
        "ActionsEnabled": true,
        "AlarmActions": [
          {
            "Fn::Join": [
              "",
              [
                "arn:aws:sns:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":mobile-server-side",
              ],
            ],
          },
        ],
        "AlarmDescription": "Triggers if not enough Ios dry run notifications are happening on CODE",
        "AlarmName": "NotEnoughIosFakeBreakingNewsAlarm-CODE",
        "ComparisonOperator": "LessThanThreshold",
        "Dimensions": [
          {
            "Name": "platform",
            "Value": "ios",
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "dryrun",
        "Namespace": "Notifications/CODE/workers",
        "Period": 7200,
        "Statistic": "Sum",
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "Threshold": 1,
        "TreatMissingData": "breaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "fakebreakingnewslambdaLambda07FB7319": {
      "DependsOn": [
        "fakebreakingnewslambdaLambdaServiceRoleDefaultPolicy29518A93",
        "fakebreakingnewslambdaLambdaServiceRole8B23CCD5",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Ref": "DistributionBucketName",
          },
          "S3Key": "mobile-notifications/CODE/fakebreakingnewslambda/fakebreakingnewslambda.jar",
        },
        "Description": "Sends a fake breaking news",
        "Environment": {
          "Variables": {
            "APP": "fakebreakingnewslambda",
            "App": "fakebreakingnewslambda",
            "STACK": "mobile-notifications",
            "STAGE": "CODE",
            "Stack": "mobile-notifications",
            "Stage": "CODE",
          },
        },
        "FunctionName": "mobile-notifications-fakebreakingnewslambda-CODE",
        "Handler": "fakebreakingnews.FakeBreakingNewsLambda::handleRequest",
        "LoggingConfig": {
          "LogFormat": "Text",
        },
        "MemorySize": 1024,
        "Role": {
          "Fn::GetAtt": [
            "fakebreakingnewslambdaLambdaServiceRole8B23CCD5",
            "Arn",
          ],
        },
        "Runtime": "java11",
        "Tags": [
          {
            "Key": "App",
            "Value": "fakebreakingnewslambda",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "Timeout": 300,
      },
      "Type": "AWS::Lambda::Function",
    },
    "fakebreakingnewslambdaLambdaServiceRole8B23CCD5": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "fakebreakingnewslambda",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "fakebreakingnewslambdaLambdaServiceRoleDefaultPolicy29518A93": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                      "/mobile-notifications/CODE/fakebreakingnewslambda/fakebreakingnewslambda.jar",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/CODE/mobile-notifications/fakebreakingnewslambda",
                  ],
                ],
              },
            },
            {
              "Action": [
                "ssm:GetParameters",
                "ssm:GetParameter",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/CODE/mobile-notifications/fakebreakingnewslambda/*",
                  ],
                ],
              },
            },
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/notifications/CODE/fakebreakingnews",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "fakebreakingnewslambdaLambdaServiceRoleDefaultPolicy29518A93",
        "Roles": [
          {
            "Ref": "fakebreakingnewslambdaLambdaServiceRole8B23CCD5",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "fakebreakingnewslambdaLambdafakebreakingnewslambdaLambdacron500BA1A9C2": {
      "Properties": {
        "ScheduleExpression": "cron(5 * * * ? *)",
        "State": "ENABLED",
        "Tags": [
          {
            "Key": "App",
            "Value": "fakebreakingnewslambda",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "Targets": [
          {
            "Arn": {
              "Fn::GetAtt": [
                "fakebreakingnewslambdaLambda07FB7319",
                "Arn",
              ],
            },
            "Id": "Target0",
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "fakebreakingnewslambdaLambdafakebreakingnewslambdaLambdacron50AllowEventRuleFakeBreakingNewsLambdaCODEfakebreakingnewslambdaLambdaE1E58EF34C0EDAAD": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "fakebreakingnewslambdaLambda07FB7319",
            "Arn",
          ],
        },
        "Principal": "events.amazonaws.com",
        "SourceArn": {
          "Fn::GetAtt": [
            "fakebreakingnewslambdaLambdafakebreakingnewslambdaLambdacron500BA1A9C2",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
  },
}
`;

exports[`The FakeBreakingNewsLambda stack matches the snapshot for PROD 1`] = `
{
  "Metadata": {
    "gu:cdk:constructs": [
      "GuDistributionBucketParameter",
      "GuScheduledLambda",
      "GuAlarm",
      "GuAlarm",
    ],
    "gu:cdk:version": "TEST",
  },
  "Parameters": {
    "DistributionBucketName": {
      "AllowedValues": [
        "/account/services/artifact.bucket.n10n",
      ],
      "Default": "/account/services/artifact.bucket.n10n",
      "Description": "SSM parameter containing the S3 bucket name holding distribution artifacts",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "NotEnoughAndroidFakeBreakingNewsAlarm2714F480": {
      "Properties": {
        "ActionsEnabled": true,
        "AlarmActions": [
          {
            "Fn::Join": [
              "",
              [
                "arn:aws:sns:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":mobile-server-side",
              ],
            ],
          },
        ],
        "AlarmDescription": "Triggers if not enough Android dry run notifications are happening on PROD",
        "AlarmName": "NotEnoughAndroidFakeBreakingNewsAlarm-PROD",
        "ComparisonOperator": "LessThanThreshold",
        "Dimensions": [
          {
            "Name": "platform",
            "Value": "android",
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "dryrun",
        "Namespace": "Notifications/PROD/workers",
        "Period": 7200,
        "Statistic": "Sum",
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "Threshold": 1,
        "TreatMissingData": "breaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "NotEnoughIosFakeBreakingNewsAlarmDC45D752": {
      "Properties": {
        "ActionsEnabled": true,
        "AlarmActions": [
          {
            "Fn::Join": [
              "",
              [
                "arn:aws:sns:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":mobile-server-side",
              ],
            ],
          },
        ],
        "AlarmDescription": "Triggers if not enough Ios dry run notifications are happening on PROD",
        "AlarmName": "NotEnoughIosFakeBreakingNewsAlarm-PROD",
        "ComparisonOperator": "LessThanThreshold",
        "Dimensions": [
          {
            "Name": "platform",
            "Value": "ios",
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "dryrun",
        "Namespace": "Notifications/PROD/workers",
        "Period": 7200,
        "Statistic": "Sum",
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "Threshold": 1,
        "TreatMissingData": "breaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "fakebreakingnewslambdaLambda07FB7319": {
      "DependsOn": [
        "fakebreakingnewslambdaLambdaServiceRoleDefaultPolicy29518A93",
        "fakebreakingnewslambdaLambdaServiceRole8B23CCD5",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Ref": "DistributionBucketName",
          },
          "S3Key": "mobile-notifications/PROD/fakebreakingnewslambda/fakebreakingnewslambda.jar",
        },
        "Description": "Sends a fake breaking news",
        "Environment": {
          "Variables": {
            "APP": "fakebreakingnewslambda",
            "App": "fakebreakingnewslambda",
            "STACK": "mobile-notifications",
            "STAGE": "PROD",
            "Stack": "mobile-notifications",
            "Stage": "PROD",
          },
        },
        "FunctionName": "mobile-notifications-fakebreakingnewslambda-PROD",
        "Handler": "fakebreakingnews.FakeBreakingNewsLambda::handleRequest",
        "LoggingConfig": {
          "LogFormat": "Text",
        },
        "MemorySize": 1024,
        "Role": {
          "Fn::GetAtt": [
            "fakebreakingnewslambdaLambdaServiceRole8B23CCD5",
            "Arn",
          ],
        },
        "Runtime": "java11",
        "Tags": [
          {
            "Key": "App",
            "Value": "fakebreakingnewslambda",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "Timeout": 300,
      },
      "Type": "AWS::Lambda::Function",
    },
    "fakebreakingnewslambdaLambdaServiceRole8B23CCD5": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "fakebreakingnewslambda",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "fakebreakingnewslambdaLambdaServiceRoleDefaultPolicy29518A93": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                      "/mobile-notifications/PROD/fakebreakingnewslambda/fakebreakingnewslambda.jar",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/PROD/mobile-notifications/fakebreakingnewslambda",
                  ],
                ],
              },
            },
            {
              "Action": [
                "ssm:GetParameters",
                "ssm:GetParameter",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/PROD/mobile-notifications/fakebreakingnewslambda/*",
                  ],
                ],
              },
            },
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/notifications/PROD/fakebreakingnews",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "fakebreakingnewslambdaLambdaServiceRoleDefaultPolicy29518A93",
        "Roles": [
          {
            "Ref": "fakebreakingnewslambdaLambdaServiceRole8B23CCD5",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "fakebreakingnewslambdaLambdafakebreakingnewslambdaLambdacron500BA1A9C2": {
      "Properties": {
        "ScheduleExpression": "cron(5 * * * ? *)",
        "State": "ENABLED",
        "Tags": [
          {
            "Key": "App",
            "Value": "fakebreakingnewslambda",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "Targets": [
          {
            "Arn": {
              "Fn::GetAtt": [
                "fakebreakingnewslambdaLambda07FB7319",
                "Arn",
              ],
            },
            "Id": "Target0",
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "fakebreakingnewslambdaLambdafakebreakingnewslambdaLambdacron50AllowEventRuleFakeBreakingNewsLambdaPRODfakebreakingnewslambdaLambdaA17F336D07109D2C": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "fakebreakingnewslambdaLambda07FB7319",
            "Arn",
          ],
        },
        "Principal": "events.amazonaws.com",
        "SourceArn": {
          "Fn::GetAtt": [
            "fakebreakingnewslambdaLambdafakebreakingnewslambdaLambdacron500BA1A9C2",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
  },
}
`;
